--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -4,4 +4,8 @@
 
 @import "./game.css";
 
+@import "./landing.css";
+
 @import "./live_view.css";
+
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
